# zap-lang

./: Cargo.toml  test.asm  test.sh
backend/: Cargo.toml
backend/src/: ast.rs  tir.rs  ty.rs
backend/src/codegen/: builder.rs  mod.rs
backend/src/codegen/generators/: expression.rs  function.rs  statement.rs
backend/tests/: integration.rs
src/: ast.rs  lib.rs  main.rs  ops.rs  tir.rs  ty.rs  util.rs
src/codegen/: builder.rs  gen.rs  mod.rs
src/codegen/generators/: expression.rs  function.rs  statement.rs
tests/: integration.rs
zap_backend/: Cargo.toml
zap_backend/src/: ast.rs
zap_backend/src/codegen/generators/: mod.rs  statement.rs
zap_backend/tests/: integration.rs
zapc/: .gitignore  Cargo.toml
zapc/src/: main.rs
zapc/src/parser/: mod.rs  parse.rs  tokenizer.rs
