[package]
name = "zapc"
version = "0.1.0"
edition = "2021"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
backend = { path = "../backend" }
clap = { version = "4.1.1", features = ["derive"] }
nom = "7.1.3"
nom_locate = "4.0.0"
snailquote = "0.3.1"
thiserror = "1.0.38"
